--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,6 @@ tags
 
 
 # End of https://www.gitignore.io/api/vim,osx,rails
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
